--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "repository": "https://github.com/Elena-S04/fe-2-diplom.git",
-  "homepage": "",
+  "homepage": "https://elena-s04.github.io/fe-2-diplom",
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@reduxjs/toolkit": "^2.0.1",
